--- a/JobSearch/src/main/resources/application.properties
+++ b/JobSearch/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 
-spring.datasource.url=jdbc:h2:mem:h2db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
+spring.datasource.url=jdbc:mysql://13.53.131.127/MCT
+spring.datasource.username=mg-stock-1
+spring.datasource.password=1234
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.jpa.properties.hibernate.show_sql=true
@@ -13,8 +11,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-
-#EnableH2Console-http://localhost:8080/h2-console
-
 #http://localhost:8080/swagger-ui/index.html#/
-
